result-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: result
  name: result
spec:
  replicas: 1
  selector:
    matchLabels:
      app: result
  template:
    metadata:
      labels:
        app: result
    spec:
      containers:
      - image: rezy19/voting-app-result:145979b5e4bbca7b7e85ad41311ba7294d9b82c6
        name: result
        ports:
        - containerPort: 80
          name: result
