vote-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: vote
  name: vote
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vote
  template:
    metadata:
      labels:
        app: vote
    spec:
      containers:
      - image: rezy19/voting-app-vote:25bd1bfb1bcc38aa319da8d8ec6764e1b3b3bc71
        name: vote
        ports:
        - containerPort: 80
          name: vote
